syntax="proto3";

package sumAPI;

option go_package="github.com/Lazaro-Barros/gRPC/sumAPI";

message SumRequest{
    int64 number1=1;
    int64 number2=2;
}

message SumResponse{
    int64 result=1;
}

service SumService{
    rpc Sum(SumRequest) returns (SumResponse);
}